Second commit v2 (added side bar navigation; fixed side bar not showing on large screens); TODO: refactor code

--- a/scss/layouts/_home.scss
+++ b/scss/layouts/_home.scss
@@ -95,10 +95,6 @@
 
   z-index: 2;
 
-  @include mqMinW(768px) {
-    display: none;
-  }
-
   .blur-filter {
     width: 100%;
     height: 100%;
